--- a/index_REMOTE_1950.html
+++ b/index_REMOTE_1950.html
@@ -39,10 +39,6 @@
                 <div class="promo-container">
                     <div class="row">
                         <div class="col-5 mx-auto text-center">
-<<<<<<< HEAD
-                            <b class="promo-title">Искусственный интеллект решающий<br>ваши бизнес-задачи</b>
-                            <p class="promo-description mt-5">Воспользуйтесь современными возможностями искусственного интеллекта, оставив конкурентов позади!</p>
-=======
                             <b class="promo-title">Искусственный интеллект для решения<br>ваших бизнес-задач</b>
                             <p class="promo-description mt-5">Ранний заказ со скидкой (только ближайшие 2 недели)!</p>
                                 <form id="earlyorder-form" class="col-10 mx-auto">
@@ -54,7 +50,6 @@
                                         </div>
                                     </div>
                                 </form>
->>>>>>> origin/feature/earlyorder
                         </div>
                     </div>
                 </div>
@@ -66,7 +61,8 @@
                         <div class="contacts-card col-6 mx-auto card pt-4 pb-4">
                             <h2 class="text-center">Оставайтесь на связи</h2>
                             <div class="card-body">
-                                <p class="text-center">Оставьте ваши контакты и мы свяжемся с вами сегодня!</p>
+                                <p class="text-center">Оставьте ваши контакты и наши менеджеры свяжутся с вами в
+                                    ближайшее время</p>
                                 <form>
                                     <div class="form-group">
                                         <label for="contact">Email или Телефон*</label>
